GNOME Bugzilla – Bug 736979
Fail to build with clang 3.4 when -pedantic is used
Last modified: 2015-01-03 07:21:28 UTC
return JS_FALSE is used in some functions which should return a pointer.
Created attachment 286632 [details] [review] Fix return values of some functions which should return a pointer
Can anyone review this patch?
Does anyone have time to review this patch? It has been ignored for three months.